<?xml version="1.0"?>
<package format="3">
  <name>rc_car_interfaces</name>
  <version>0.1.0</version>
  <description>Action and message definitions for the Abstract Labs RC car.</description>
  <maintainer email="bhivesh@abstractlabs.dev">Bhivesh</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>action_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
</package>
